--- a/templates/cadastro_cliente.html
+++ b/templates/cadastro_cliente.html
@@ -15,6 +15,8 @@
 		<div id="menu">
 			<ul>
 				<li class="menuitem"><a href="{{ .Host }}/"><h1>::</h1></a></li>
+				<li class="menuitem"><a href="{{ .Host }}/CadastroArea"><h1>Area</h1></a></li>
+				<li class="menuitem"><a href="{{ .Host }}/CadastroPedido"><h1>Pedido</h1></a></li>
 				<li class="menuitem"><a href="{{ .Host }}/Cadastros"><h1>Cadastros</h1></a></li>
 				<li class="menuitem"><a href="{{ .Host }}/Relatorios"><h1>Relatórios</h1></a></li>
 				<li class="menuitem"><a href="{{ .Host }}/Sobre"><h1>??</h1></a></li>
