--- a/templates/cadastro_pedido.html
+++ b/templates/cadastro_pedido.html
@@ -15,6 +15,7 @@
 		<div id="menu">
 			<ul>
 				<li class="menuitem"><a href="{{ .Host }}/"><h1>::</h1></a></li>
+				<li class="menuitem"><a href="{{ .Host }}/CadastroGlp"><h1>Glp</h1></a></li>
 				<li class="menuitem"><a href="{{ .Host }}/Cadastros"><h1>Cadastros</h1></a></li>
 				<li class="menuitem"><a href="{{ .Host }}/Relatorios"><h1>Relatórios</h1></a></li>
 				<li class="menuitem"><a href="{{ .Host }}/Sobre"><h1>??</h1></a></li>
