--- a/templates/cadastro_preco.html
+++ b/templates/cadastro_preco.html
@@ -15,6 +15,8 @@
 		<div id="menu">
 			<ul>
 				<li class="menuitem"><a href="{{ .Host }}/"><h1>::</h1></a></li>
+				<li class="menuitem"><a href="{{ .Host }}/CadastroArea"><h1>Area</h1></a></li>
+				<li class="menuitem"><a href="{{ .Host }}/CadastroGlp"><h1>Glp</h1></a></li>
 				<li class="menuitem"><a href="{{ .Host }}/Cadastros"><h1>Cadastros</h1></a></li>
 				<li class="menuitem"><a href="{{ .Host }}/Relatorios"><h1>Relatórios</h1></a></li>
 				<li class="menuitem"><a href="{{ .Host }}/Sobre"><h1>??</h1></a></li>
@@ -189,9 +191,6 @@
 			<div id="content_top"></div>
 			<div id="content_main">
 				<form name="myform1" onsubmit="return onsubmitform();">
-					<h1>
-						Preço&nbsp;:&nbsp;<input type="number" name="preco"  min="0.01" step="0.01" max="2500" value="">
-					</h1>
 					<br>
 						<h1>
 							Glp&nbsp;:&nbsp;<select name="id_glp" selecionado>
@@ -233,7 +232,11 @@
 									{{end}}
 								{{end}}
 							</select>
-							<br><br>
+							<br>
+							<h1>
+								Preço&nbsp;:&nbsp;<input type="number" name="preco"  min="0.01" step="0.01" max="2500" value="">
+							</h1>
+							<br>
 						<table border="1" align="left">
 							<tr>
 								<td>
